--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -1,10 +1,32 @@
-.benefits{
-    // @extend %container;
-    @include container;
-}
-
+//  .benefits {
+//   //  @extend %container;
+//    @include container;
+//  }
 
 .benefits__wrapper {
+  @media screen and (min-width: 480px) {
+    width: 450px;
+    height: 120px;
+    display: flex;
+    margin-bottom: 30px;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f4fa;
+    border-radius: 4px;
+  }
+
+  @media screen and (min-width: 786px) {
+    width: 354px;
+    height: 120px;
+    display: flex;
+    margin-bottom: 30px;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f4fa;
+    border-radius: 4px;
+  }
+
+  @media screen and (min-width: 1200px) {
     width: 270px;
     height: 120px;
     display: flex;
@@ -13,19 +35,55 @@
     align-items: center;
     background-color: #f5f4fa;
     border-radius: 4px;
+  }
 }
 
 .benefits__card {
+  @media screen and (min-width: 480px) {
+    margin-bottom: var(--card-set-gap);
+    flex-basis: calc(100% / 4 - var(--card-set-gap));
+    // margin-left: var(--card-set-gap);
+  }
+  @media screen and (min-width: 786px) {
+    flex-basis: calc(100% / 4 - var(--card-set-gap));
+    margin-bottom: var(--card-set-gap);
+     margin-left: var(--card-set-gap);
+
+  }
+  @media screen and (min-width: 1200px) {
     flex-basis: calc(100% / 4 - var(--card-set-gap));
     margin-left: var(--card-set-gap);
+  }
 }
 
 .benefits__list {
+  @media screen and (min-width: 480px) {
+    //  margin-left: calc(-1 * var(--card-set-gap));
+  }
+  @media screen and (min-width: 768px) {
+     display: flex;
+     flex-wrap: wrap;
+     margin-left: calc(-1 * var(--card-set-gap));
+  }
+  @media screen and (min-width: 1200px) {
     display: flex;
     margin-left: calc(-1 * var(--card-set-gap));
+  }
 }
 
 .benefits__title {
+  @media screen and (min-width: 480px) {
+    padding-bottom: 10px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: calc(16 / 14);
+    letter-spacing: 0.03em;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--secondary-title-color);
+  }
+
+  @media screen and (min-width: 786px) {
     padding-bottom: 10px;
     font-weight: 700;
     font-size: 14px;
@@ -33,11 +91,22 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--secondary-title-color);
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 10px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: calc(16 / 14);
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--secondary-title-color);
+  }
 }
 
 .benefits__text {
-    font-size: 14px;
-    line-height: calc(24 / 14);
-    letter-spacing: 0.03em;
-    color: var(--description-color);
+  font-size: 14px;
+  line-height: calc(24 / 14);
+  letter-spacing: 0.03em;
+  color: var(--description-color);
 }
