--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,7 +1,36 @@
+$breakpoints:(
+    'phone': 480px,
+    'tablet': 768px,
+    'desktop': 1200px,
+);
+
 .container {
-    width: 1200px;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-left: auto;
-    margin-right: auto;
+   
+
+    // phone screen
+    @media screen and (min-width: 480px) {
+        width: 480px;
+        padding-right: 15px;
+            padding-left: 15px;
+             margin-left: auto;
+             margin-right: auto;
+    }
+
+    // tablet screen
+    @media screen and (min-width: 768px) {
+        width: 768px;
+        padding-right: 15px;
+            padding-left: 15px;
+            margin-left: auto;
+            margin-right: auto;
+    }
+
+    // decktop screen
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+        padding-right: 15px;
+            padding-left: 15px;
+            margin-left: auto;
+            margin-right: auto;
+    }
 }
