--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,22 +1,61 @@
-.clients{
-// @extend %container;
-@include container;
-}
+// .clients{
+// // @extend %container;
+// @include container;
+// }
 
 
 .clients__title {
-    margin-bottom: 50px;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: calc(42 / 36);
-    letter-spacing: 0.03em;
-    color: var(--secondary-title-color);
-    text-align: center;
+    @media screen and (min-width: 480px) {
+            margin-bottom: 30px;
+                font-weight: 700;
+                    font-size: 28px;
+                line-height: calc(33 / 28);
+                letter-spacing: 0.03em;
+                color: var(--secondary-title-color);
+                text-align: center;
+        }
+    
+        @media screen and (min-width: 786px) {
+            margin-bottom: 30px;
+                font-weight: 700;
+                font-size: 28px;
+                line-height: calc(33 / 28);
+                letter-spacing: 0.03em;
+                color: var(--secondary-title-color);
+                text-align: center;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            margin-bottom: 50px;
+                font-weight: 700;
+                font-size: 36px;
+                line-height: calc(42 / 36);
+                letter-spacing: 0.03em;
+                color: var(--secondary-title-color);
+                text-align: center;
+        }
+    
+   
 }
 
 .clients__list {
-    display: flex;
-    gap: 30px;
+    @media screen and (min-width: 480px) {
+        display: flex;
+         flex-wrap: wrap;
+        gap: 30px;
+    }
+    
+        @media screen and (min-width: 786px) {
+            display: flex;
+                 flex-wrap: wrap;
+                gap: 30px;
+        }
+    
+        @media screen and (min-width: 1200px) {
+            display: flex;
+            gap: 30px;
+        }
+   
 }
 
 .clients__link {
@@ -25,7 +64,7 @@
     align-items: center;
     border: 1px solid #afb1b8;
     border-radius: 4px;
-    width: 170px;
+    
     height: 92px;
     color: #afb1b8;
 
@@ -39,6 +78,18 @@
     border: 1px solid var(--accent-color);
     border-radius: 4px;
     }
+
+         @media screen and (min-width: 480px) {
+        width: 210px;
+         }
+    
+         @media screen and (min-width: 786px) {
+            width: 226px;
+         }
+    
+         @media screen and (min-width: 1200px) {
+            width: 170px;
+         }
 }
 
 .clients__icon {
